# Anvil

./: .gitignore  CLAUDE.md  README.md
AgentRuntime/: pyproject.toml  requirements.txt
AgentRuntime/anvil_agent/: __init__.py  __main__.py  agent_loop.py  main.py  permissions.py  settings.py
AgentRuntime/anvil_agent/gateway/: __init__.py  config.py  server.py  session_router.py
AgentRuntime/anvil_agent/git/: detector.py  service.py
AgentRuntime/anvil_agent/hooks/: __init__.py  engine.py
AgentRuntime/anvil_agent/ipc/: __init__.py  protocol.py  server.py
AgentRuntime/anvil_agent/mcp/: __init__.py  client.py
AgentRuntime/anvil_agent/memory/: __init__.py  manager.py  nudger.py  user_model.py
AgentRuntime/anvil_agent/planning/: __init__.py  manager.py
AgentRuntime/anvil_agent/projects/: manager.py
AgentRuntime/anvil_agent/services/: __init__.py  endpoint_manager.py  model_catalog.py  ollama_service.py  system_info.py
AgentRuntime/anvil_agent/session/: __init__.py  manager.py  search.py
AgentRuntime/anvil_agent/skills/: creator.py  executor.py  hub.py  improver.py  loader.py
AgentRuntime/anvil_agent/system/: info.py  monitor.py
AgentRuntime/tests/: test_build_install.py  test_e2e_chat.py  test_endpoint_manager.py  test_gateway_config.py  test_gateway_server.py  test_hooks_engine.py  test_memory_nudger.py  test_model_catalog.py  test_performance_monitor.py  test_permissions.py  test_session_search.py  test_settings.py  test_skill_creator.py  test_skill_improver.py  test_skills_hub.py  test_system_info.py  test_team_manager.py  test_user_model.py
(+89 files in other folders)
