[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "anvil-agent"
version = "0.1.0"
description = "Anvil AI Agent Runtime"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
anvil-agent = "anvil_agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
